web/book/tests/documentation/snapshots/documentation__book__reference__spec__name-resolution__translating-to-sql__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nselect first_name\n"
---
SELECT
  first_name
FROM
  employees
